fixed overflow issue

--- a/sass/base/_homePage.scss
+++ b/sass/base/_homePage.scss
@@ -6,7 +6,7 @@
   align-items: center;
 
   @include respond(tab) {
-    padding: 6.5rem 0;
+    padding: 7rem 0;
   }
 
   &__title {
