--- a/sass/components/_projectCard.scss
+++ b/sass/components/_projectCard.scss
@@ -69,7 +69,6 @@
           );
           border-radius: 0.4rem;
           box-decoration-break: clone;
-          -webkit-box-decoration-break: clone;
         }
       }
 
